# DistributedAFS

p1/results/applications/: parallel_build
p1/results/filebench/: filemicro_create  filemicro_createand.f  filemicro_createfiles.f  filemicro_createrand.f  filemicro_delete.f  filemicro_rread.f  filemicro_rwritedsync.f  filemicro_seqread.f  filemicro_seqwrite.f  filemicro_statfile.f  filemicro_writefsync.f  fileserver.f  mongo.f  varmail.f  webserver.f
p1/results/filebench_old/: filemicro_create.f  filemicro_createand.f  filemicro_createrand.f  filemicro_delete.f  filemicro_seqwrite.f  filemicro_statfile.f  filemicro_writefsync.f  mongo.f
p1/scripts/: fs_util.py  test1_clientA.py  test3_clientB.py  test4_clientB.py  test5_clientA.py  test5_clientB.py  test7_clientA.py  test7_clientB.py
p1/src/: CMakeLists.txt  afs.grpc.pb.cc  afs.grpc.pb.h  afs.pb.cc  afs.pb.h  afs.proto  afs_client.cc  afs_client.hh  afs_server.cc  unreliablefs.c  unreliablefs_ops.c  unreliablefs_ops.h  wrapper.cc  wrapper.h
results/applications/: xv6
results/filebench/: filemicro_create.f  filemicro_seqread.f  filemicro_writefsync.f  varmail.f
results/filebench_old/: filemicro_rread.f  filemicro_rwritedsync.f  filemicro_seqread.f  varmail.f  webserver.f
scripts/: fs_util.py  start_client.sh  test1_clientB.py  test2_clientA.py  test2_clientB.py  test4_clientA.py  test6_clientA.py  test6_clientB.py  test8_clientB.py
src/: CMakeLists.txt  afs.proto  afs_server.cc
